# terminalgpt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/agent/: __init__.py  ollama_agent.py
src/audio/: __init__.py  recorder.py
src/cli/: agent_cli.py
